# format

./: CHANGELOG.md  Cargo.toml  README.md  RELEASING.md  courageous.schema.json  examples.typ  main.typ  point_tracking.json  schema_reader.typ  template.typ
.github/workflows/: ci.yml  rust.yml
docs/src/: SUMMARY.md
docs/src/basic_concepts/: chapter_1.md  class_ident.md  cuas_location.md  detec_track.md  record_fields.md
docs/src/common_uses/: basic_example.md  examples.md  intercepting.md  special_cases.md
docs/src/track2kml/: track2kml.md
examples/: schemagen.rs
objects/: coordinates.typ  detection.typ  document.typ  tracking.typ  util.typ
schema/: Cargo.toml  courageous.schema.json
schema/src/: lib.rs  main.rs
src/: lib.rs
