[package]
name = "schema"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "schema"

[[example]]
name = "schemagen"
required-features = ["schemars"]

[features]
schemars = []

[dependencies]
schemars = "0.8.12"
serde = "1.0.164"

[dev-dependencies]
serde_json = "1.0.96"
