[package]
name = "courageous-format"
version = "0.6.1+schema.0.4.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "courageous_format"

[[example]]
name = "schemagen"
required-features = ["schemars"]

[features]
schemars = []

[dependencies]
schemars = "0.8.12"
serde = "1.0.164"

[dev-dependencies]
serde_json = "1.0.96"
